(next release) on (date of next release)
24.08.00 VZ: added "remove identity" command, it is now possible to set
             signature/X-face and other composition parameters for each identity
             separately
24.08.00 KB: rpm generation and SuSE compilation work now (export RPM_ROOT= 
             and if required make a link to it from the default location).
             Added support for PAM under Linux to configure.
21.08.00 KB: made install wizard explain more and always creates the INBOX
             default folder for IMAP servers added warning about browsing
             taking very long
16.08.00 VZ: install wizard now creates all IMAP folders in the folder tree
11.08.00 VZ: new option for not quoting the empty lines in reply
06.08.00 KB: added printing to filter functions
             renamed configure options back to --with instead of --enable
             changed handling of --with-experimental to allow multiple
             experimental settings together
31.07.00 VZ: serious bug with messages in base64 encoding fixed
28.07.00 VZ: readded rsh timeout setting, but it is now disabled by default
26.07.00 VZ: encode 8bit characters in the header of outgoing messages too
             allow adding all subfolders of an IMAP/MH/NNTP folder automatically
25.07.00 VZ: support for setting charset for the outgoing messages
21.07.00 VZ: completely rewrote subfoldrs dialog which is now *much* faster
19.07.00 VZ: it is possible to specify several address which should be replaced
             with the destination address when the corresponding option is on
18.07.00 VZ: fixed serious bug in handling options changes, they are now
             handled correctly and [Apply] and [Cancel] behave as expected
             added the identity choice to the toolbar (advanced mode only)
             the background colour of the folder tree can now be changed
08.07.00 KB: Find now highlights text in viewer, MFilter reads/writes filter